# htmx-rs-todo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  create_default_photo.py  default.nix  flake.nix  package-lock.json  package.json  playwright.config.ts  shell.nix
e2e-tests/: 01-basic.spec.ts  02-recipes.spec.ts  03-meal-plan.spec.ts  04-drag-drop.spec.ts
self_signed_certs/: cert.csr  cert.pem  key.pem  privkey.pem
sql/: schema.sql
src/: database.rs  grocy.rs  lib.rs  main.rs  template.rs  todo.rs
templates/: add_meal_form.html  add_recipe_to_list.html  add_recipe_to_meal_plan.html  create_list.html  index.html  list_tables.html  lists.html  manage.html  meal_plan.html  recipe_detail.html  recipe_form.html  recipes.html  select_list.html  task.html  tasks-complete.html  tasks.html  todos-complete.html  todos.html  weekly_ingredients.html
tests/: integration_tests.rs  meal_plan_tests.rs  photo_upload_simple_test.rs  photo_upload_test.rs  recipe_tests.rs
tests/common/: mod.rs
