[package]
name = "htmx-rs-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-rusqlite = "0.5.1"
rusqlite = { version = ">0.1", features = ["bundled", "trace"] }
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
