[package]
name = "htmx-rs-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-rusqlite = "0.5.1"
rusqlite = { version = ">0.1", features = ["bundled", "trace"] }
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
anyhow = "1.0.88"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.5.19", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.24.0", features = ["jpeg", "png"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"
bytes = "1.0"
futures = "0.3"
multer = "3.1"
regex = "1.0"

[dev-dependencies]
axum-test = "15.0.1"
tokio-test = "0.4.4"
tempfile = "3.12.0"
tower = { version = "0.4", features = ["util"] }
tokio-util = { version = "0.7", features = ["codec"] }
